--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "raml-types-to-schemas",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Tool for conversion from Types in RAML 1.0 to JSON Schemas ",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PGS-dev/raml-types-to-schemas.git"
+  },
+  "homepage": "https://github.com/PGS-dev/raml-types-to-schemas",
+  "dependencies": {
     "commander": "^2.9.0",
     "fs": "0.0.2",
     "jsonfile": "^2.3.1",
@@ -15,6 +19,7 @@
     "path": "^0.12.7",
     "raml-1-parser": "^0.2.22"
   },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
